# properPy_project

./: .flake8  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yaml
sandbox_pytest/: math_ops.py  star_wars_info.py
tests/test_sandbox_pytest/: test_math_ops.py  test_star_wars_info.py  test_with_basic_pytest.py
