[tool.poetry]
name = "sandbox_pytest"
version = "0.1.0"
description = "sandbox report for improving python testing skills with pytest"
authors = ["David Dansby <ddansby89@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^5.4.3"
black = "^19.10b0"
pre-commit = "^2.4.0"
flake8 = "^3.8.2"
mypy = "^0.780"
pytest-cov = "^2.9.0"

[tool.poetry.dev-dependencies]

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

